REGRESSION(288965@main): Committed by mistake. https://bugs.webkit.org/show_bug.cgi?id=286037 rdar://143009080
Reviewed by Youenn Fablet.

This commit revert 288965@main, and make WebCodecsAudioEnabled preference "preview"
so that it is enabled in STP.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Canonical link: https://commits.webkit.org/289007@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -8428,7 +8428,7 @@ WebCodecsAV1Enabled:
 
 WebCodecsAudioEnabled:
   type: bool
-  status: stable
+  status: preview
   category: media
   humanReadableName: "WebCodecs Audio API"
   humanReadableDescription: "Enable WebCodecs Audio API"
@@ -8438,11 +8438,9 @@ WebCodecsAudioEnabled:
       default: false
     WebKit:
       "USE(GSTREAMER)": true
-      "PLATFORM(COCOA)": true
       default: false
     WebCore:
       "USE(GSTREAMER)": true
-      "PLATFORM(COCOA)": true
       default: false
 
 WebCodecsHEVCEnabled:
