--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Model.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Model.sb.in
@@ -45,3 +45,10 @@
         SYS_sendmsg
         SYS_setsockopt
     ))
+
+#if ENABLE(SANDBOX_WORKAROUND_FOR_MODEL_PROCESS)
+;; FIXME: Remove after rdar://124086612 is addressed
+(allow mach-bootstrap
+    (apply-message-filter
+        (allow mach-message-send (message-number 800 804))))
+#endif
