--- a/Source/WebCore/page/ProcessSyncData.in
+++ b/Source/WebCore/page/ProcessSyncData.in
@@ -63,3 +63,4 @@ DocumentURL : URL [DocumentSyncData Header=<wtf/URL.h>]
 DocumentSecurityOrigin : RefPtr<WebCore::SecurityOrigin> [DocumentSyncData Header="SecurityOrigin.h"]
 DocumentClasses : OptionSet<WebCore::DocumentClass> [DocumentSyncData Header="DocumentClasses.h"]
 HasFullscreenElement : bool [DocumentSyncData]
+HasInjectedUserScript : bool [DocumentSyncData]
