[iOS] Add support for bidi content-aware paste and drop https://bugs.webkit.org/show_bug.cgi?id=286240 rdar://142486815
Reviewed by Megan Gardner and Abrar Rahman Protyasha.

Add support for new editing behaviors when pasting and dropping text, behind a new internal runtime
flag `BidiContentAwarePasteEnabled`. Currently, pasted content always takes on the text direction at
the start of the selection. When this feature is enabled and only when the user is pasting or
dropping text at the start of a new (empty) paragraph, the text direction of the inserted content
will automatically take the natural text direction of the pasted text, by setting a direction for
the enclosing containing block at the start of the inserted content range.

* LayoutTests/editing/pasteboard/paste-rtl-text-in-empty-ltr-paragraph-expected.txt: Added.
* LayoutTests/editing/pasteboard/paste-rtl-text-in-empty-ltr-paragraph.html: Added.

Add a new layout test to exercise the change.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/editing/ApplyStyleCommand.cpp:
(WebCore::ApplyStyleCommand::ApplyStyleCommand):
(WebCore::ApplyStyleCommand::doApply):
* Source/WebCore/editing/ApplyStyleCommand.h:

Move the `PropertyLevel` enum out of this class, and into `CompositeEditCommand.h` as a separate
enum — `ApplyStylePropertyLevel`. This is so that `CompositeEditCommand::applyStyle` can take an
optional property level argument, which is passed back into `ApplyStyleCommand` when creating and
applying the command.

(WebCore::ApplyStyleCommand::create):
* Source/WebCore/editing/CompositeEditCommand.cpp:
(WebCore::CompositeEditCommand::applyStyle):
* Source/WebCore/editing/CompositeEditCommand.h:
* Source/WebCore/editing/Editor.cpp:
(WebCore::Editor::applyParagraphStyle):
* Source/WebCore/editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplaceSelectionCommand::doApply):
(WebCore::ReplaceSelectionCommand:

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -860,6 +860,20 @@ BeaconAPIEnabled:
     WebCore:
       default: false
 
+BidiContentAwarePasteEnabled:
+  type: bool
+  status: internal
+  humanReadableName: "Bidi Content Aware Paste"
+  humanReadableDescription: "Bidi content aware paste"
+  defaultValue:
+    WebKit:
+      "PLATFORM(IOS_FAMILY)": WebKit::defaultBidiContentAwarePasteEnabled()
+      default: false
+    WebKitLegacy:
+      default: false
+    WebCore:
+      default: false
+
 BlobFileAccessEnforcementEnabled:
   type: bool
   status: embedder
