Fix Windows JSCOnly build https://bugs.webkit.org/show_bug.cgi?id=286320
Reviewed by Justin Michaud.

Running `./Tools/Scripts/build-webkit --jsc-only` was not working on Windows.
Hook in the build to the perl scripts.

Update the CMake build options to mirror the PlatformWin options.

* Source/JavaScriptCore/CMakeLists.txt:
* Source/cmake/OptionsJSCOnly.cmake:
* Tools/Scripts/build-webkit:
* Tools/Scripts/webkitdirs.pm:
(determineConfigurationProductDir):

Canonical link: https://commits.webkit.org/289204@main

--- a/Source/JavaScriptCore/CMakeLists.txt
+++ b/Source/JavaScriptCore/CMakeLists.txt
@@ -1460,7 +1460,7 @@ set(JavaScriptCore_INTERFACE_DEPENDENCIES
 WEBKIT_FRAMEWORK_DECLARE(JavaScriptCore)
 WEBKIT_INCLUDE_CONFIG_FILES_IF_EXISTS()
 
-if (PORT STREQUAL GTK OR PORT STREQUAL WPE OR PORT STREQUAL JSCOnly)
+if (NOT WIN32)
     WEBKIT_ADD_TARGET_CXX_FLAGS(JavaScriptCore
         -Wunsafe-buffer-usage
         -fsafe-buffer-usage-suggestions
