[Site Isolation] Creating an iframe while updating the history state of its parent causes a new back/forward item to be created https://bugs.webkit.org/show_bug.cgi?id=286334 rdar://143359188
Reviewed by Alex Christensen.

When a root child frame expects its initial history state to be committed, we store a
WebBackForwardListFrameItem on its WebFrameProxy and add a child to it when the history item is
committed. If the WebBackForwardListFrameItem is destroyed before the item is committed, a new item is
added to the back-forward list instead of adding a frame to the existing item.

To fix this, we should stop destroying children in WebBackForwardListFrameItem::setFrameState.
BackForwardUpdateItem should update only its own state, and there should be a separate, explicit message
for clearing history item children.

* LayoutTests/http/tests/site-isolation/history/add-iframe-while-changing-document-title-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/history/add-iframe-while-changing-document-title.html: Added.
* LayoutTests/http/tests/site-isolation/resources/post-message-from-child-to-parent.html: Added.
* Source/WebCore/history/HistoryItem.cpp:
(WebCore::HistoryItem::clearChildren):
* Source/WebCore/history/HistoryItem.h:
* Source/WebCore/loader/EmptyClients.cpp:
* Source/WebKit/Shared/WebBackForwardListFrameItem.cpp:
(WebKit::WebBackForwardListFrameItem::setFrameState):
* Source/WebKit/Shared/WebBackForwardListFrameItem.h:
(WebKit::WebBackForwardListFrameItem::clearChildren):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::backForwardClearChildren):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/WebProcess/WebPage/WebHistoryItemClient.cpp:
(WebKit::WebHistoryItemClient::clearChildren const):
* Source/WebKit/WebProcess/WebPage/WebHistoryItemClient.h:
* Source/WebKitLegacy/mac/WebCoreSupport/LegacyHistoryItemClient.h:
* Source/WebKitLegacy/mac/WebCoreSupport/LegacyHistoryIt

--- a/Source/WebKit/UIProcess/WebPageProxy.messages.in
+++ b/Source/WebKit/UIProcess/WebPageProxy.messages.in
@@ -207,6 +207,7 @@ messages -> WebPageProxy {
     # BackForward messages
     BackForwardAddItem(Ref<WebKit::FrameState> navigatedFrameState)
     BackForwardSetChildItem(WebCore::BackForwardFrameItemIdentifier frameItemID, Ref<WebKit::FrameState> frameState)
+    BackForwardClearChildren(WebCore::BackForwardItemIdentifier itemID, WebCore::BackForwardFrameItemIdentifier frameItemID)
     BackForwardUpdateItem(Ref<WebKit::FrameState> frameState)
     BackForwardGoToItem(WebCore::BackForwardItemIdentifier itemID) -> (struct WebKit::WebBackForwardListCounts counts) Synchronous
     BackForwardItemAtIndex(int32_t itemIndex, WebCore::FrameIdentifier frameID) -> (RefPtr<WebKit::FrameState> frameState) Synchronous
