[Win] The view size shouldn't be affected by the custom device scale factor https://bugs.webkit.org/show_bug.cgi?id=285007
Reviewed by Don Olmstead.

<https://commits.webkit.org/279794@main> added the device scale factor
support for Windows port.

Unlike other modern platforms, in the legacy win32 platfrom, a native
window size is scaled in high DPI. For example, 100x100 window (in
normal DPI) becomes 150x150 in a 150% DPI display. Thus, all
dimensions and positions have to be converted between the inside
WebKit and a native win32 window. The win32 coordinate system can be
converted to the WebKit coordinate system by division by the scale
factor. The WebKit coordinate system can be converted to the win32
coordinate system by multiplication by the scale factor.

However, a custom device scale factor is specified, the custom device
scale factor shouldn't be used for the conversion. The conversion
should be done by the intrinsic device scale factor.

* Source/WebCore/PlatformWin.cmake:
* Source/WebCore/platform/graphics/FloatPoint.h:
* Source/WebCore/platform/graphics/IntRect.h:
* Source/WebCore/platform/graphics/win/FloatPointWin.cpp: Added.
(WebCore::FloatPoint::FloatPoint):
* Source/WebKit/Shared/WebPageCreationParameters.h:
* Source/WebKit/Shared/WebPageCreationParameters.serialization.in:
* Source/WebKit/Shared/win/WebEventFactory.cpp:
(WebKit::WebEventFactory::createWebMouseEvent):
(WebKit::WebEventFactory::createWebWheelEvent):
* Source/WebKit/UIProcess/BackingStore.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/skia/BackingStoreSkia.cpp:
(WebKit::BackingStore::paint):
* Source/WebKit/UIProcess/wc/DrawingAreaProxyWC.cpp:
(WebKit::DrawingAreaProxyWC::sizeDidChange):
* Source/WebKit/UIProcess/win/WebPopupMenuProxyWin.cpp:
(WebKit::WebPopupMenuProxyWin::calculatePositionAndSize):
(WebKit::WebPopupMenuProxyWin::invalidateItem):
(WebKit::WebPopupMenuProxyWi

--- a/Source/WebKit/Shared/WebPageCreationParameters.serialization.in
+++ b/Source/WebKit/Shared/WebPageCreationParameters.serialization.in
@@ -68,6 +68,9 @@ enum class WebCore::UserInterfaceLayoutDirection : bool;
     bool canRunModal;
 
     float deviceScaleFactor;
+#if USE(GRAPHICS_LAYER_WC) || USE(GRAPHICS_LAYER_TEXTURE_MAPPER)
+    float intrinsicDeviceScaleFactor;
+#endif
     float viewScaleFactor;
 
     double textZoomFactor;
