Silence NECP system call logs in Model Process https://bugs.webkit.org/show_bug.cgi?id=286319 rdar://138186574
Reviewed by Per Arne Vollan.

The logs do not affect model's rendering functionality but create a lot of noise.
Addressing a decision to silence them from now.

* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Model.sb.in:

Canonical link: https://commits.webkit.org/289298@main

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Model.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Model.sb.in
@@ -52,3 +52,7 @@
     (apply-message-filter
         (allow mach-message-send (message-number 800 804))))
 #endif
+
+;; FIXME: Remove after rdar://138963941 is addressed
+(deny syscall-unix (with no-report) (syscall-number SYS_necp_open))
+(deny syscall-unix (with no-report) (syscall-number SYS_necp_client_action))
