Add `disableInLockdownMode: true` in UnifiedWebPreferences.yaml for DigitalCredentialsEnabled https://bugs.webkit.org/show_bug.cgi?id=286436 rdar://143497794
Reviewed by Brent Fulgham.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Canonical link: https://commits.webkit.org/289315@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -2693,6 +2693,7 @@ DigitalCredentialsEnabled:
     WebCore:
       default: false
   sharedPreferenceForWebProcess: true
+  disableInLockdownMode: true
   richJavaScript: true
 
 DirectoryUploadEnabled:
