Unreviewed, update bmalloc reviewer to JSC reviewer https://bugs.webkit.org/show_bug.cgi?id=286739 rdar://143880634
JSC team is maintaining and fixing bugs. Thus, bmalloc / libpas changes
should notify JSC reviewers and they should be reviewed by JSC reviewers.

* .github/CODEOWNERS:

Canonical link: https://commits.webkit.org/289556@main

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -64,8 +64,8 @@
 # ================================================================================
 # bmalloc
 
-/Source/bmalloc @Constellation
-/Tools/TestWebKitAPI/Tests/WTF/bmalloc @Constellation
+/Source/bmalloc @WebKit/jsc-reviewers
+/Tools/TestWebKitAPI/Tests/WTF/bmalloc @WebKit/jsc-reviewers
 
 # ================================================================================
 # JavaScriptCore
